# offconvert

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.ts
apps/desktop/scripts/: prepare-engines.mjs
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: Sidebar.tsx
apps/desktop/src/features/convert/: ConvertView.tsx
apps/desktop/src/features/queue/: QueueView.tsx
apps/desktop/src/lib/: i18n.ts  store.ts  types.ts
apps/desktop/src/locales/en/: common.json
apps/desktop/src/locales/tr/: common.json
binaries/: manifest.json
crates/converter-cli/: Cargo.toml
crates/converter-cli/src/: main.rs
crates/converter-core/: Cargo.toml
crates/converter-core/src/: errors.rs  execution.rs  formats.rs  inspection.rs  lib.rs  paths.rs  presets.rs  progress.rs  queue.rs  requests.rs
crates/converter-core/tests/: core_smoke.rs
crates/converter-engines/: Cargo.toml
crates/converter-engines/src/: lib.rs
crates/converter-models/: Cargo.toml
crates/converter-models/src/: lib.rs
crates/shell-integration/: Cargo.toml
crates/shell-integration/src/: lib.rs
docs/: architecture.md  releasing.md  setup-windows.md
presets/: audio.json  image.json  video.json
