[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/converter-cli",
  "crates/converter-core",
  "crates/converter-engines",
  "crates/converter-models",
  "crates/shell-integration"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.2"
authors = ["OffConvert contributors"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.39", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
